Kickstart 4.1.0
================================================================================
# [LOW] If you have both kickstart.php and a renamed copy (e.g. x.php) and try to access the renamed copy you get a Fatal Error
# [HIGH] Contrary to what was promised, you could not really extract archives in a directory other than the one Kickstart is in.

Kickstart 4.0.0
================================================================================
+ You can list and extract archives in any directory, not just the one Kickstart is in
+ If you use the default backup output directories, Kickstart will automatically look for archives there if the directory where Kickstart is doesn't contain any archives
# [MEDIUM] Clicking on Browse when you had selected the Hybrid mode would attempt to launch the SFTP directory browser instead of the FTP directory browser
# [MEDIUM] The Port setting in (S)FTP options was ignored

Kickstart 3.9.0
================================================================================
# [HIGH] The Hybrid restoration mode failed to connect to FTP, making it equivalent to using direct file writes every time
# [HIGH] Kickstart throws a Javascript error on Windows
# [HIGH] Importing from a URL doesn't work when the remote web server doesn't support Range headers (e.g. when downloading the latest Joomla! release)
# [LOW] The Hybrid restoration mode wasn't compatible with HHVM (HipHop Virtual Machine, an alternative PHP runtime by Facebook)

Kickstart 3.8.1
================================================================================
+ Detect if the restored is Joomla!. If not, do not show the "Visit the site's back-end" button to avoid confusion.
+ Support for installing the latest WordPress release using Kickstart

Kickstart 3.8.0
================================================================================